--- a/views/includes/content/testimonials/tomasso.ejs
+++ b/views/includes/content/testimonials/tomasso.ejs
@@ -1,4 +1,4 @@
-I'm very excited to finally see something innvoative in the youth soccer
+I'm very excited to finally see something innovative in the youth soccer
 landscape. Through technological innovation, GDL will create an environment that
 is truly designed for player development, and allows all the various stakeholders
 (players, coaches, parents) to focus only on the exciting aspects of being
