--- a/views/includes/homepage_sections/testimonials.ejs
+++ b/views/includes/homepage_sections/testimonials.ejs
@@ -5,7 +5,7 @@
         <div class="row">
             <%- include('../minis/testimonial', {
                 img: "tomasso",
-                name: "Tomasso Trevisan",
+                name: "Tommaso Trevisan",
                 title: "NE Surf Soccer Club",
             }); %> 
             <%- include('../minis/testimonial', {
