--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -1,9 +1,18 @@
+<ul id="dropdown1" class="dropdown-content">
+    <li><a href="#!">GDL HOME</a></li>
+    <li class="divider"></li>
+    <li><a href="#!">GDL MA</a></li>
+    <li><a href="#!">GDL NH</a></li>
+    <li><a href="#!">GDL RI</a></li>
+    <li><a href="#!">GDL ME</a></li>
+</ul>
+
 <nav>
     <div class="nav-wrapper">
         <ul class="main center hide-on-small-only">
             <div class="first">
                 <li><a href="/">Home</a></li>
-                <li><a href="/leagues">Programs</a></li>
+                <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Programs<i class="material-icons right">arrow_drop_down</i></a></li>
                 <li><a href="/franchise">Franchise</a></li>
             </div>
             <a href="/" class="no-hover"><img class="logo" src="/images/leagues/logo-draft.png"></a>
