--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -1,10 +1,10 @@
 <ul id="dropdown1" class="dropdown-content">
-    <li><a href="#!">GDL HOME</a></li>
+    <li><a href="/leagues">GDL HOME</a></li>
     <li class="divider"></li>
-    <li><a href="#!">GDL MA</a></li>
-    <li><a href="#!">GDL NH</a></li>
-    <li><a href="#!">GDL RI</a></li>
-    <li><a href="#!">GDL ME</a></li>
+    <li><a href="/leagues/MA">GDL MA</a></li>
+    <li><a href="/leagues/NH">GDL NH</a></li>
+    <li><a href="/leagues/RI">GDL RI</a></li>
+    <li><a href="/leagues/ME">GDL ME</a></li>
 </ul>
 
 <nav>
