--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -140,7 +140,7 @@ nav .nav-wrapper ul a.no-hover:hover {
     background: url('/images/backgrounds/aboutus.jpg');
 }
 
-.fullImageLeague {
+.fullImageLeague, .fullImageLeagueLanding {
     background: url('/images/backgrounds/programs.jpg');
 }
 
@@ -182,12 +182,33 @@ nav .nav-wrapper ul a.no-hover:hover {
     text-align: right;
 }
 
+.fullImageLeagueLanding .image {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.fullImageLeagueLanding .image img {
+    height: 450px;
+}
+
+.member {
+    text-align: center;
+}
+
+.member img.headshot {
+    height: 150px;
+}
+
 .fullImageAboutUs h3, .fullImageFranchise h3 {
     display: inline;
     padding-bottom: 10px;
     border-bottom: 4px solid grey;
     font-weight: bold;
     color: #333;
+}
+
+.fullImageLeagueLanding h3 {
+    border-bottom: 4px solid white;
 }
 
 .fullImageLeague h3, .fullImageJoin h3 {
@@ -895,6 +916,12 @@ div.mapContainer {
 
 .download {
     background: linear-gradient(45deg, #02af5f, #074c96);
+}
+
+.download.banner {
+    font-size: 24px;
+    font-weight: bold;
+    padding: 0 10%;
 }
 
 .download .wrap {
