dynamic header with different leagues

--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -15,7 +15,7 @@
                 <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Programs<i class="material-icons right">arrow_drop_down</i></a></li>
                 <li><a href="/franchise">Franchise</a></li>
             </div>
-            <a href="/" class="no-hover"><img class="logo" src="/images/leagues/logo-draft.png"></a>
+            <a href="/" class="no-hover"><img class="logo" src="/images/leagues/MA.png"></a>
             <div class="second">
                 <li><a href="/joinUs">Join Us</a></li>
                 <li><a href="/aboutus">About Us</a></li>
