--- a/views/includes/homepage_sections/ourLeagues.ejs
+++ b/views/includes/homepage_sections/ourLeagues.ejs
@@ -3,19 +3,19 @@
         <h3 class="center-align typicalTitle">Our Programs</h3>
         <div class="row">
             <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/leagues/logo-draft.png">
+                <img class="leaguesLogo" src="/images/leagues/MA.png">
                 <h5 class="green-text bold">GDL MA</h5>
             </div>
             <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/leagues/red.png">
+                <img class="leaguesLogo" src="/images/leagues/RI.png">
                 <h5 class="red-text bold">GDL RI</h5>
             </div>
             <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/leagues/orange.png">
+                <img class="leaguesLogo" src="/images/leagues/NH.png">
                 <h5 class="orange-text bold">GDL NH</h5>
             </div>
             <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/leagues/purple.png">
+                <img class="leaguesLogo" src="/images/leagues/ME.png">
                 <h5 class="blue-text bold">GDL ME</h5>
             </div>
         </div>
