--- a/views/includes/leaguelanding_sections/header.ejs
+++ b/views/includes/leaguelanding_sections/header.ejs
@@ -5,7 +5,7 @@
                 <h3 class="white-text">GDL <span>Leagues</span></h3>
             </div>
             <div class="col s9 image hide-on-med-and-down">
-                <img class="program" src="/images/leagues/red.png">
+                <img class="program" src="/images/leagues/<%= league %>.png">
             </div>
         </div>
     </div>
