--- a/views/includes/aboutus_sections/technology.ejs
+++ b/views/includes/aboutus_sections/technology.ejs
@@ -17,11 +17,13 @@
                 </div>
                 <ul class="col s12 m6">
                     <li>
+                        <div class="dot hide-on-small-only"></div>
                         Curriculum & Coach licensing 
                         <br>
                         <span class="grey-text text-darken-1">Age and development appropriate</span>
                     </li>
                     <li>
+                        <div class="dot hide-on-small-only"></div>
                         Full communication & scheduling tools
                         <br>
                         <span class="grey-text text-darken-1">Keep coaches and players updated in real time</span>
@@ -35,11 +37,13 @@
             <div class="row phone">
                 <ul class="col s12 m6">
                     <li>
+                        <div class="dot hide-on-small-only"></div>
                         Ongoing data driven assesments 
                         <br>
                         <span class="grey-text text-darken-1">of coach and referee performance</span>
                     </li>
                     <li>
+                        <div class="dot hide-on-small-only"></div>
                         Real time feedback from coaches
                         <br>
                         <span class="grey-text text-darken-1">every player, every single match</span>
