hooked up league logos to the pages

--- a/views/includes/homepage_sections/ourLeagues.ejs
+++ b/views/includes/homepage_sections/ourLeagues.ejs
@@ -2,22 +2,30 @@
     <div class="container">
         <h3 class="center-align typicalTitle">Our Programs</h3>
         <div class="row">
-            <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/leagues/MA.png">
-                <h5 class="green-text bold">GDL MA</h5>
-            </div>
-            <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/leagues/RI.png">
-                <h5 class="red-text bold">GDL RI</h5>
-            </div>
-            <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/leagues/NH.png">
-                <h5 class="orange-text bold">GDL NH</h5>
-            </div>
-            <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/leagues/ME.png">
-                <h5 class="blue-text bold">GDL ME</h5>
-            </div>
+            <a href="/leagues/MA">
+                <div class="league col s12 m6 l3">
+                    <img class="leaguesLogo" src="/images/leagues/MA.png">
+                    <h5 class="green-text bold">GDL MA</h5>
+                </div>
+            </a>
+            <a href="/leagues/RI">
+                <div class="league col s12 m6 l3">
+                    <img class="leaguesLogo" src="/images/leagues/RI.png">
+                    <h5 class="red-text bold">GDL RI</h5>
+                </div>
+            </a>
+            <a href="/leagues/NH">
+                <div class="league col s12 m6 l3">
+                    <img class="leaguesLogo" src="/images/leagues/NH.png">
+                    <h5 class="orange-text bold">GDL NH</h5>
+                </div>
+            </a>
+            <a href="/leagues/ME">
+                <div class="league col s12 m6 l3">
+                    <img class="leaguesLogo" src="/images/leagues/ME.png">
+                    <h5 class="blue-text bold">GDL ME</h5>
+                </div>
+            </a>
         </div>
     </div>
 </div>
