--- a/views/includes/minis/newsStory.ejs
+++ b/views/includes/minis/newsStory.ejs
@@ -1,7 +1,7 @@
 <div class="story section scrollspy" id="story<%= id %>">
     <div class="header">
         <div class="top">
-            <div class="league <%= league %>">GDL <%= league %></div>
+            <a href="/leagues/<%= league %>" style="color: black;"><div class="league <%= league %>">GDL <%= league %></div></a>
             <p class="title bold"><%= title %></p>
             <div class="leagueSmall <%= league %>">GDL <%= league %></div>
         </div>
