hooked up tapin league logos to tapin website

--- a/views/includes/aboutus_sections/tapinLeagues.ejs
+++ b/views/includes/aboutus_sections/tapinLeagues.ejs
@@ -2,18 +2,22 @@
     <div class="container">
         <p class="darkerGreen bold">TapIn Leagues</p>
         <div class="row">
-            <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/leagues/tapinlogo1.png">
-            </div>
+            <a href="https://tapinmobilesolutions.com/haiti">
+                <div class="league col s12 m6 l3">
+                    <img class="leaguesLogo" src="/images/leagues/tapinlogo1.png">
+                </div>
+            </a>
             <div class="league col s12 m6 l3">
                 <img class="leaguesLogo" src="/images/leagues/tapinlogo2.png">
             </div>
             <div class="league col s12 m6 l3">
                 <img class="leaguesLogo" src="/images/leagues/tapinlogo3.png">
             </div>
-            <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/leagues/tapinlogo4.png">
-            </div>
+            <a href="https://tapinmobilesolutions.com/uganda">
+                <div class="league col s12 m6 l3">
+                    <img class="leaguesLogo" src="/images/leagues/tapinlogo4.png">
+                </div>
+            </a>
         </div>
     </div>
 </div>
