--- a/views/includes/homepage_sections/fullWidthImage.ejs
+++ b/views/includes/homepage_sections/fullWidthImage.ejs
@@ -2,6 +2,6 @@
     <div class="container">
         <h1 class="center-align white-text">Grassroots Development League</h1>
         <p class="center-align flow-text white-text">Soccer starts here!</p>
-        <a href="/joinus" class="btn-large waves-effect waves-green">Join Us</a>
+        <a href="/joinus" class="btn-large tapinBtn waves-effect waves-green">Join Us</a>
     </div>
 </div>
