--- a/views/joinUs.ejs
+++ b/views/joinUs.ejs
@@ -14,8 +14,10 @@
     <!-- Types -->
     <%- include('includes/joinus_sections/types'); %>
 
+    <!-- Options -->
+    <%- include('includes/joinus_sections/options'); %>
+
     <!-- Info -->
-    <!-- <%- include('includes/joinus_sections/cost'); %> -->
     <%- include('includes/joinus_sections/included'); %>
     <%- include('includes/joinus_sections/howToJoin'); %>
 
