Fixed small css error

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -180,7 +180,7 @@ nav .nav-wrapper ul a.no-hover:hover {
     
 }
 
-.ourProgram .row .program .col {
+.ourProgram .row .col {
     max-height: 345px;
 }
 
