--- a/views/includes/homepage_sections/whatWeDo.ejs
+++ b/views/includes/homepage_sections/whatWeDo.ejs
@@ -1,6 +1,11 @@
 <div class="whatWeDo">
+    <div>
+        <p class="test">
+            This is my awesome animated element!
+        </p>
+    </div>
     <div class="container big">
-        <h3 class="center-align typicalTitle">What We Do</h3>
+        <h3 class="center-align typicalTitle aniview" data-av-animation="slideInRight">What We Do</h3>
         <div class="row">
             <%- include('../minis/whatWeDoCard', {
                 title: "Technology",
