Revert "Merge branch 'master' into animations"
This reverts commit 06fb04224e405d239a409eaf90a070b1c8d316a1, reversing
changes made to aeaa5743b3187d60cda5806776572fb35baff33b.

--- a/views/includes/general/contactUs.ejs
+++ b/views/includes/general/contactUs.ejs
@@ -3,7 +3,7 @@
         <h4 class="center-align white-text typicalTitle" style="margin: 0;">Contact Us</h4>
         <div class="social">
             <a href="/joinus#contactform"><img class="social-icon" id="1" src="/images/social/email.png"></a>
-            <a href="https://www.facebook.com/Grassroots-Development-League-110113637449498/"><img class="social-icon" src="/images/social/facebook.png"></a>
+            <a><img class="social-icon" src="/images/social/facebook.png"></a>
             <a><img class="social-icon" src="/images/social/twitter.png"></a>
             <a href="https://www.instagram.com/gdlsoccer/"><img class="social-icon" src="/images/social/instagram.png"></a>
         </div>
