--- a/views/includes/homepage_sections/jquery.ejs
+++ b/views/includes/homepage_sections/jquery.ejs
@@ -1,4 +1,13 @@
 <script>
+    const animateCSS = (element, animation, prefix = 'animate__') =>
+    // We create a Promise and return it
+    new Promise((resolve, reject) => {
+        const animationName = `${prefix}${animation}`;
+        const node = document.querySelector(element);
+
+        node.classList.add(`${prefix}animated`, animationName);
+    });
+    
     $(document).ready(function(){
         $('.sidenav').sidenav();
         $(".dropdown-trigger").dropdown();    
@@ -25,33 +34,17 @@
 
             let scroll = $(window).scrollTop()
 
-            if (scroll > 500) {
-                print(scroll)
+            if (scroll > 300) {
+                $('.whatWeDo .card').addClass('animate__animated').addClass('animate__bounceInRight').css('opacity', '1')
             }
-           
+    
         })
 
     });
 
 
-    const animateCSS = (element, animation, prefix = 'animate__') =>
-    // We create a Promise and return it
-    new Promise((resolve, reject) => {
-        const animationName = `${prefix}${animation}`;
-        const node = document.querySelector(element);
-
-        node.classList.add(`${prefix}animated`, animationName);
-
-        // When the animation ends, we clean the classes and resolve the Promise
-        function handleAnimationEnd() {
-        node.classList.remove(`${prefix}animated`, animationName);
-        resolve('Animation ended');
-        }
-
-        node.addEventListener('animationend', handleAnimationEnd, {once: true});
-    });
+    
 
     
-    animateCSS('.test', 'bounce');
 
 </script>
