--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -222,6 +222,7 @@ nav .nav-wrapper ul a.no-hover:hover {
     flex-direction: column;
     align-items: center;
     margin-bottom: 100px;
+    opacity: 0;
 }
 
 .ourProgram .program img {
@@ -253,6 +254,10 @@ nav .nav-wrapper ul a.no-hover:hover {
 .ourLeagues .league, .ourLeagues .person {
     text-align: center;
     margin-top: 50px;
+}
+
+.ourLeagues .league {
+    opacity: 0;
 }
 
 .carousel-wrapper {
