--- a/views/includes/homepage_sections/jquery.ejs
+++ b/views/includes/homepage_sections/jquery.ejs
@@ -7,6 +7,17 @@
 
         node.classList.add(`${prefix}animated`, animationName);
     });
+
+    const checkIfInView = (el, anim, offset, delay) => {
+        var top_of_element = el.offset().top;
+        var bottom_of_element = el.offset().top + el.outerHeight();
+        var bottom_of_screen = $(window).scrollTop() + $(window).innerHeight();
+        var top_of_screen = $(window).scrollTop();
+
+        if ((bottom_of_screen > top_of_element + offset) && (top_of_screen < bottom_of_element)){
+            el.addClass('animate__animated').css('animation-delay', delay.toString()).addClass('animate__' + anim).css('opacity', '1')
+        }
+    }   
     
     $(document).ready(function(){
         $('.sidenav').sidenav();
@@ -32,12 +43,31 @@
 
         $(window).scroll(function() {
 
-            let scroll = $(window).scrollTop()
+            // let scroll = $(window).scrollTop()
 
-            if (scroll > 300) {
-                $('.whatWeDo .card').addClass('animate__animated').addClass('animate__bounceInRight').css('opacity', '1')
+            // if (scroll > 300) {
+            //     $('.whatWeDo .card').addClass('animate__animated').addClass('animate__bounceInRight').css('opacity', '1')
+            // }
+
+            // if (scroll > 1000) {
+            //     $('.ourProgram .program:lt(3)').addClass('animate__animated').addClass('animate__slideInRight').css('opacity', '1')
+            //     $('.ourProgram .program').slice(3,6).addClass('animate__animated').addClass('animate__slideInLeft').css('opacity', '1')
+            // }
+
+            // if (scroll > 6400) { 
+            //     $('.partner-container').addClass('animate__animated').addClass('animate__backInUp').css('opacity', '1')
+            // }
+
+            // console.log(scroll)
+
+            checkIfInView($('.whatWeDo .card'), 'bounceInRight', 300, '0')
+            checkIfInView($('.ourProgram .program:lt(3)'), 'slideInRight', 300, '0')
+            checkIfInView($('.ourProgram .program').slice(3,6), 'slideInLeft', 300, '0')
+            
+            for(let i=0;i<4;i++) {
+                checkIfInView($('.ourLeagues .league').eq(i), 'fadeIn', 300, i*200 + 'ms')
             }
-    
+
         })
 
     });
