--- a/views/includes/homepage_sections/jquery.ejs
+++ b/views/includes/homepage_sections/jquery.ejs
@@ -68,6 +68,8 @@
                 checkIfInView($('.ourLeagues .league').eq(i), 'fadeIn', 300, i*200 + 'ms')
             }
 
+            checkIfInView($('.news-card'), 'flipInX', 300, '0')
+
         })
 
     });
