--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -670,6 +670,7 @@ div.mapContainer {
     align-items: flex-end;
     padding: 15px 15px;
     margin-top: 50px;
+    opacity: 0;
 }
 
 .news-card p.title {
