added programs pages to sidenav

--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -6,6 +6,14 @@
     <li><a href="/leagues/RI">GDL RI</a></li>
     <li><a href="/leagues/ME">GDL ME</a></li>
 </ul>
+<ul id="dropdown2" class="dropdown-content">
+    <li><a href="/leagues">GDL HOME</a></li>
+    <li class="divider"></li>
+    <li><a href="/leagues/MA">GDL MA</a></li>
+    <li><a href="/leagues/NH">GDL NH</a></li>
+    <li><a href="/leagues/RI">GDL RI</a></li>
+    <li><a href="/leagues/ME">GDL ME</a></li>
+</ul>
 
 <nav>
     <div class="nav-wrapper">
@@ -28,7 +36,7 @@
 
 <ul class="sidenav" id="mobile-demo">
     <li><a href="/" class="green-text text-darken-3">Home</a></li>
-    <li><a href="/leagues" class="green-text text-darken-3">Programs</a></li>
+    <li><a class="dropdown-trigger green-text text-darken-3" href="#!" data-target="dropdown2">Programs<i class="material-icons right">arrow_drop_down</i></a></li>
     <li><a href="/franchise" class="green-text text-darken-3">Franchise</a></li>
     <li><a href="/joinUs" class="green-text text-darken-3">Join</a></li>
     <li><a href="/aboutus" class="green-text text-darken-3">About Us</a></li>
