--- a/views/includes/general/contactUs.ejs
+++ b/views/includes/general/contactUs.ejs
@@ -1,5 +1,5 @@
 <div class="contactUs">
-    <div class="container">
+    <!-- <div class="container">
         <h4 class="center-align white-text typicalTitle" style="margin: 0;">Contact Us</h4>
         <div class="social">
             <a href="/joinus#contactform"><img class="social-icon" id="1" src="/images/social/email.png"></a>
@@ -7,5 +7,23 @@
             <a><img class="social-icon" src="/images/social/twitter.png"></a>
             <a href="https://www.instagram.com/gdlsoccer/"><img class="social-icon" src="/images/social/instagram.png"></a>
         </div>
+    </div> -->
+    <div class="footer">
+        <p>Follow Us</p>
+        <div class="row">
+            <div class="col s12 m6 l3">
+                <a href="/joinus#contactform"><img class="social-icon" id="1" src="/images/social/email.png"></a>
+            </div>
+            <div class="col s12 m6 l3">
+                <a><img class="social-icon" src="/images/social/facebook.png"></a>
+            </div>
+            <div class="col s12 m6 l3">
+                <a><img class="social-icon" src="/images/social/twitter.png"></a>
+            </div>
+            <div class="col s12 m6 l3">
+                <a href="https://www.instagram.com/gdlsoccer/"><img class="social-icon" src="/images/social/instagram.png"></a>
+            </div>
+        </div>
+
     </div>
 </div>
