--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -833,6 +833,13 @@ div.mapContainer {
     padding: 20px 50px;
 }
 
+@media only screen and (max-width:400px) {
+    .info table td {
+        text-align: left;
+        padding: 5px 10px;
+    }
+}
+
 .info table p.bold {
     font-size: 24px;
     font-family: var(--header-font);
