--- a/views/includes/news_sections/newsContainer.ejs
+++ b/views/includes/news_sections/newsContainer.ejs
@@ -6,6 +6,7 @@
             title: "TapIn Partnership",
             info: "Boston, MA June 3, 2020",
             img: "/images/news/news1.png",
+            preview: '../content/stories/tapinPartnershipPreview',
             content: "../content/stories/tapinPartnership",
         }); %>
         <%- include('../minis/newsStory', {
@@ -14,6 +15,7 @@
             title: "Palla Partnership",
             info: "Boston, MA June 6, 2020",
             img: "/images/news/news2.png",
+            preview: '../content/stories/pallaPartnershipPreview',
             content: "../content/stories/pallaPartnership",
         }); %>
     </div>
