text-based changes from Justin

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -108,6 +108,11 @@ nav .nav-wrapper ul a.no-hover:hover {
     font-style: italic;
 }
 
+.fullImageJoin p a {
+    color: white;
+    text-decoration: underline;
+}
+
 .fullImageAboutUs .image, .fullImageFranchise .image {
     text-align: right;
 }
