--- a/views/includes/content/leagues_header.ejs
+++ b/views/includes/content/leagues_header.ejs
@@ -1,3 +1,1 @@
-The Grassroots Development League (GDL) begins programming in four states in Spring 2021.
-Operating in Massachusetts, New Hampshire, Maine, and Rhode Island, the GDL is creating supplemental
-development opportunities for young players throughout New England as the revolutionary concept is launched!
+The Grassroots Development League (GDL) begins programming in multiple locations in Spring 2021. Initially operating throughout Massachusetts and Connecticut, the GDL is creating supplemental development opportunities for u7 and u8 players as the revolutionary concept is launched!
