--- a/views/includes/content/mission_statement.ejs
+++ b/views/includes/content/mission_statement.ejs
@@ -1,3 +1,1 @@
-The mission of the Grassroots Development League (GDL) is to provide, through the adoption of a 
-unique technology that is built specifically to emphasize development, a fun, engaging, player centric 
-program whilst administering a diverse and inclusive environment.
+The mission of the Grassroots Development League (GDL) is to provide supplemental development opportunities for u7 and u8 players. Utilizing a unique technology to provide players with real time digital feedback in a fun and engaging way, the GDL’s education driven approach makes it the first program of its kind in the marketplace! With a focus placed on creating a convenient, low cost and low commitment program, the GDL truly does cater for all!  
