--- a/views/includes/content/our_story.ejs
+++ b/views/includes/content/our_story.ejs
@@ -1,8 +1,8 @@
-The Grassroots Development League (GDL) was created to provide a developmentally appropriate 
-opportunity for motivated young soccer players prior to their transition into a more formal and 
-structured environment. 
+The Grassroots Development League (GDL) was created to provide a developmentally appropriate, supplemental opportunity for motivated young soccer players. Introducing the concept of competition and exposing teams to outside groups for the first time, in a controlled and low pressure environment, makes the GDL a perfect stepping stone for teams as they prepare for their transition into more organized and structured play at u9.
+
 <br>
 <br>
-Supported by a unique software platform, the GDL is a FUN, engaging, and safe progam that adheres to 
-US Soccer recommendations with regards to format and structure.
+Supported by a unique software platform, the GDL is a fun, engaging, and safe program that adheres to US Soccer recommendations with regards to format and structure.
+
+
 
