--- a/views/includes/joinus_sections/contactForm.ejs
+++ b/views/includes/joinus_sections/contactForm.ejs
@@ -1,4 +1,4 @@
-<a name="contactform">
+<a id="contact_form">
 <div class="container joinUsInfo">
     <h3>I'm interested...</h3>
     <div class="row contactForm">
