--- a/views/includes/joinus_sections/header.ejs
+++ b/views/includes/joinus_sections/header.ejs
@@ -7,6 +7,8 @@
                     The Grassroots Development League is OPEN to all! Catering for 
                     U7 and U8 Boys and Girls, the programs supports Clubs, Town or Recreation Groups,
                     Individual Team and even Individual Players!
+                    <br>
+                    We are accepting applications for the Spring 2021 season NOW! <a href="#contact_form">Click here to submit your application (we need to create an application form)</a>
                 </p>
             </div>
         </div>
