--- a/views/includes/joinus_sections/included.ejs
+++ b/views/includes/joinus_sections/included.ejs
@@ -4,48 +4,38 @@
     <div class="row">
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinRed">
-                Full Event Schedule
+                Multiple 2 Festivals, 4 Games
             </div>
         </div>
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinRed">
-                End of Season Event
+                Unique, Digital Player Cards
             </div>
         </div>
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinRed">
-                Individual Team Awards
+                Developmental Feedback 
             </div>
         </div>
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinYellow">
-                Palla Sports Product
+                Fields
             </div>
         </div>
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinYellow">
-                Developmental Feedback
+                Referees and Site Staff
             </div>
         </div>
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinYellow">
-                Digital Player Card
-            </div>
-        </div>
-        <div class="col s12 l4">
-            <div class="include valign-wrapper tapinBlue">
                 Full Insurance Coverage
             </div>
         </div>
-        <div class="col s12 l4">
+        <div class="col s12">
             <div class="include valign-wrapper tapinBlue">
-                Weekly Session Plans
+                Complimentary Training Plans
             </div>
         </div>
-        <div class="col s12 l4">
-            <div class="include valign-wrapper tapinBlue">
-                Weekly Skills Challenges
-            </div>
-        </div>    
     </div>
 </div>
