--- a/views/includes/joinus_sections/options.ejs
+++ b/views/includes/joinus_sections/options.ejs
@@ -11,19 +11,7 @@
                 <img src="/images/leagues/logo-draft.png">
             </td>
             <td>
-                <p>All you have to do is have your players register, provide a coach, and we will do the rest!</p>
-            </td>
-        </tr>
-        <tr class="grey lighten-1">
-            <td>GDL Hybrid</td>
-            <td></td>
-        </tr>
-        <tr class="grey lighten-5">
-            <td>
-                <img src="/images/leagues/hybrid.png">
-            </td>
-            <td>
-                <p>An a-la-carte option for organizations - take on as much or as little as you like, then it's up to us!</p>
+                <p>Submit an application for a GDL Program at any of our locations through MA and CT TODAY</p>
             </td>
         </tr>
         <tr class="grey lighten-1">
@@ -36,13 +24,11 @@
                 <img src="/images/leagues/logo-draft.png">
             </td>
             <td>
-                <p>We provide the format, the content, and the technology, use your resources to do the rest!</p>
+                <p>The GDL also provides the option to adopt the program internally for those who prefer to keep things ‘in-house’. For more information on this program please contact info@gdlsoccer.com</p>
             </td>
         </tr>
+        <!-- IDK why but  deleting this messes up the formatting  -->
         <tr>
-            <td class="bottom" colspan="2" style="border: 1px solid lightgrey">
-                <p>*Organizations can use the GDL to run in-house only programs, invite other select groups, or enter into open programs with multiple other teams</p>
-            </td>
         </tr>
     </table>
     <table style="table-layout: fixed;" class="optionsTableMobile">
@@ -55,20 +41,7 @@
             </td>
         </tr>
         <tr class="grey lighten-3">
-            <td><p>All you have to do is have your players register, provide a coach, and we will do the rest!</p></td>
-        </tr>
-        <tr class="grey lighten-1">
-            <td>GDL Hybrid</td>
-        </tr>
-        <tr class="grey lighten-5">
-            <td>
-                <img src="/images/leagues/hybrid.png">
-            </td>
-        </tr>
-        <tr class="grey lighten-3">
-            <td>
-                <p>An a-la-carte option for organizations - take on as much or as little as you like, then it's up to us!</p> 
-            </td>
+            <td><p>Submit an application for a GDL Program at any of our locations through MA and CT TODAY</p></td>
         </tr>
         <tr class="grey lighten-1">
             <td>Powered by GDL</td>
@@ -81,13 +54,11 @@
         </tr>
         <tr class="grey lighten-3">
             <td>
-                <p>We provide the format, the content, and the technology, use your resources to do the rest!</p>
+                <p>The GDL also provides the option to adopt the program internally for those who prefer to keep things ‘in-house’. For more information on this program please contact info@gdlsoccer.com</p>
             </td>
         </tr>
+        <!-- IDK why but  deleting this messes up the formatting  -->
         <tr>
-            <td>
-                <p>*Organizations can use the GDL to run in-house only programs, invite other select groups, or enter into open programs with multiple other teams</p>
-            </td>
         </tr>
     </table>
 </div>
