--- a/views/includes/leagues_sections/info.ejs
+++ b/views/includes/leagues_sections/info.ejs
@@ -7,10 +7,9 @@
                 </td>
                 <td class="tapinRed lighter">
                     <ul>
-                        <li>U7 AND U8 PLAYERS</li>
-                        <li>7 GAME SEASON</li>
-                        <li>4 FESTIVAL Format</li>
-                        <li>FESTIVALS EVERY OTHER WEEK</li>
+                        <li>4 game season</li>
+                        <li>2 festival format</li>
+                        <li>Festivals at the start and end of season</li>
                     </ul>
                 </td>
             </tr>
@@ -20,10 +19,7 @@
                 </td>
                 <td class="tapinYellow lighter">
                     <ul>
-                        <li>4X4, NO GK'S</li>
-                        <li>25X35 YDS FIELD, 3X5FT GOALS</li>
-                        <li>1 REFEREE</li>
-                        <li>40 MIN GAMES- 4 QUATERS</li>
+                        <li>24 min games</li>
                     </ul>
                 </td>
             </tr>
@@ -50,10 +46,9 @@
             <tr>
                 <td class="tapinRed lighter">
                     <ul>
-                        <li>U7 AND U8 PLAYERS</li>
-                        <li>7 GAME SEASON</li>
-                        <li>4 FESTIVAL Format</li>
-                        <li>FESTIVALS EVERY OTHER WEEK</li>
+                        <li>4 game season</li>
+                        <li>2 festival format</li>
+                        <li>Festivals at the start and end of season</li>
                     </ul>
                 </td>
             </tr>
