--- a/views/includes/leagues_sections/stickers.ejs
+++ b/views/includes/leagues_sections/stickers.ejs
@@ -5,7 +5,7 @@
             <tr>
                 <td class="red">Hard Worker</td>
                 <td class="grey">Great Student</td>
-                <td class="green">Good Sportsman</td>
+                <td class="green">Fair Play</td>
                 <td class="blue">Great Play</td>
             </tr>
             <tr>
@@ -31,7 +31,7 @@
                 <td><img class="sticker" src="/images/stickers/gear.png"></td>
             </tr>
             <tr>
-                <td class="green">Good Sportsman</td>
+                <td class="green">Fair Play</td>
             </tr>
             <tr>
                 <td><img class="sticker" src="/images/stickers/handshake.png"></td>
