--- a/views/includes/content/our_story_more.ejs
+++ b/views/includes/content/our_story_more.ejs
@@ -1,10 +1,3 @@
-The Grassroots Development League (GDL) was founded by a group of visionary industry 
-professionals, with significant experience in the youth soccer marketplace. Through utilization 
-of a brand new technology platform, designed and adapted to focus on the education of players, 
-coaches and parents, the GDL absorbs the administration requirements associated with operating 
-a league style program. The foundation of the GDL concept was built around recognition of the 
-absence of an organized, development focussed program that supplements the vast array of training 
-opportunities that currently exist for U7/U8 players. The deliberate inclusive nature of the program 
-creates a diverse competitive platform for players and teams from all walks of life. The player 
-centric design of the program creates a fun, safe and engaging atmosphere that is driven by development 
-versus results.
+The Grassroots Development League (GDL) was founded by a group of visionary industry professionals, with significant experience in the youth soccer marketplace. Through utilization of a brand new technology platform, designed and adapted to focus on the education of players, coaches and parents, the GDL absorbs the administration requirements associated with operating a festival style program. The foundation of the GDL concept was built around recognition of the absence of an organized, development focused program that supplements the vast array of training opportunities that currently exist for u7/u8 players. The deliberate open and inclusive nature of the program creates a diverse competitive platform for players and teams from all walks of life. By operating at multiple geographic locations, the GDL provides players and teams with a convenient, low cost and low commitment program to help foster their individual and collective development.
+
+ 
