--- a/views/includes/homepage_sections/ourProgram.ejs
+++ b/views/includes/homepage_sections/ourProgram.ejs
@@ -26,9 +26,9 @@
                 info: "Built by Experienced Soccer Leaders/Educators"
             }); %>
             <%- include('../minis/ourProgramCard', {
-                title: "Full Administration Platform",
+                title: "Complimentary Program",
                 image: "circlePeople",
-                info: "End to End League and Program Management"
+                info: "Supplemental, Convenient, Low Cost and Commitment"
             }); %>
             <%- include('../minis/ourProgramCard', {
                 title: "Open to All",
