deleted phones on about us page

--- a/views/includes/aboutus_sections/technology.ejs
+++ b/views/includes/aboutus_sections/technology.ejs
@@ -9,7 +9,7 @@
             <img class="tapinlogo" src="/images/leagues/tapin.png">
         </div>
     </div>
-    <div class="outergrey grey lighten-3">
+    <!-- <div class="outergrey grey lighten-3">
         <div class="container">
             <div class="row phone">
                 <div class="phoneImage col s12 m6">
@@ -55,5 +55,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
