CT map added to franchise

--- a/views/includes/franchise_sections/activeFranchises.ejs
+++ b/views/includes/franchise_sections/activeFranchises.ejs
@@ -20,5 +20,23 @@
             </ul>
         </div>
     </div>
+    <div class="mapContainer">
+        <div class="map">
+            <img src="/images/CT.png" alt="" class="map">
+        </div>
+        <div class="legend">
+            <p class="bold">Availability</p>
+            <ul>
+                <li>
+                    <div class="color colorHigh"></div>
+                    <p>Towns in County</p>
+                </li>
+                <li>
+                    <div class="color colorNone"></div>
+                    <p>No Towns in County</p>
+                </li>
+            </ul>
+        </div>
+    </div>
    
 </div>
