contact form updates

--- a/views/includes/joinus_sections/types.ejs
+++ b/views/includes/joinus_sections/types.ejs
@@ -89,5 +89,8 @@
                 </td>
             </tr>
         </table>
+        <div class="row button" style="margin-top: 50px;">
+            <a class="btn tapinBtn" href="#contact_form">Apply Here</a>
+        </div>
     </div>
 </div>
